# Analytics-Engineer

./: LICENSE  README.md
AI Agents - Asimov/: my_os.py  pyproject.toml
AI Agents - Asimov/Agno/: 1.4.RAG.py  deploy_2.py  deploy_3.py
AI Agents/Agno/: pyproject.toml
AI Agents/Agno/AgentOS/: my_os.py
AI Agents/Agno/Streamlit/: stream.py
ETL/: Projeto_cubo_dados.dtsx
Kaggle/Analysis/Jupyterlab/: BreastCancer.ipynb  airlines_flights.ipynb  breast_cancer.py  clothing_sales.ipynb  finance_economics.ipynb  healthcare.ipynb  iris_multiclass.py  iris_save_multiclass.ipynb  payment_fraud.ipynb  social-study_suicide-rates.ipynb  uber.ipynb  vehicle_reg.py
Kaggle/Analysis/Previsão sobre preços de veículos/: predict_vehicle_prices.ipynb
Kaggle/Analysis/csv files/: finance_economics_dataset.csv  saidas_breast.csv
Kaggle/Projeto 1 - Previsão de preços de veículos/: modelo_treinado_veiculos.pk
Kaggle/Projeto 2 - Previsão do desligamento de colaboradores/: employee_turnover.ipynb
SQL Server/data cube/: data_retrieve_etl_flow.sql
SQL Server/optimization/: remove_duplicates.sql
SQL Server/report automation/: bkp_file_rpt.sql
