[project]
name = "curso-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agno>=2.3.24",
    "chromadb>=1.4.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "google-genai>=1.58.0",
    "groq>=1.0.0",
    "openai>=2.15.0",
    "pypdf>=6.6.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
    "tavily-python>=0.7.17",
    "uvicorn>=0.40.0",
    "watchdog>=6.0.0",
    "yfinance>=1.0",
]
