[project]
name = "curso-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.4.3",
    "chromadb>=1.5.9",
    "fastapi>=0.128.0",
    "openai>=2.15.0",
    "pyjwt>=2.12.1",
    "pypdf>=6.11.0",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.53.1",
]
